@@ -12,6 +12,7 @@ class IRFreeNavigation(DDLScraperNavigation):
 	feeds = {};
 	feeds['all']			= "http://irfree.com"
 	feeds['apps']			= "http://irfree.com/category/applications"
+	feeds['mac']			= "http://irfree.com/category/applications/mac-os-x-applications"
 	feeds['ebooks']			= "http://irfree.com/category/e-books"
 	feeds['magazines']		= "http://irfree.com/category/e-books/magazines"
 	feeds['games']			= "http://irfree.com/category/gamez"
@@ -21,7 +22,10 @@ class IRFreeNavigation(DDLScraperNavigation):
 	feeds['psp']			= "http://irfree.com/category/gamez/console-games/psp"
 	feeds['wii']			= "http://irfree.com/category/gamez/console-games/wii-console-games"
 	feeds['xbox360']		= "http://irfree.com/category/gamez/console-games/xbox360"
-	feeds['iphone']			= "http://irfree.com/category/iphoneiopd-apps-games"
+	feeds['mobile']			= "http://irfree.com/category/mobile-applications"
+	feeds['android']		= "http://irfree.com/category/mobile-applications/android-mobile-applications"
+	feeds['iphone']			= "http://irfree.com/category/mobile-applications/iphoneiopd-apps-games"
+	feeds['winmobile']		= "http://irfree.com/category/mobile-applications/windows-mobile"
 	feeds['movies']			= "http://irfree.com/category/moviez"
 	feeds['anime']			= "http://irfree.com/category/moviez/anime"
 	feeds['hdrip']			= "http://irfree.com/category/moviez/bdripbbrip"
@@ -34,16 +38,17 @@ class IRFreeNavigation(DDLScraperNavigation):
 	feeds['ts']				= "http://irfree.com/category/moviez/telesyncts"
 	feeds['music']			= "http://irfree.com/category/music"
 	feeds['musicvideos']	= "http://irfree.com/category/music/music-videos"
-	#feeds['off-topic']		= "http://irfree.com/category/off-topic" news, announcements, no downloads
-	feeds['other']			= "http://irfree.com/category/other"
+	feeds['off-topic']		= "http://irfree.com/category/off-topic" # NOT_USED: news, announcements, no downloads
 	feeds['retro']			= "http://irfree.com/category/retro"
-	feeds['templates']		= "http://irfree.com/category/templates"
 	feeds['tutorials']		= "http://irfree.com/category/tutorials"
 	feeds['tvshows']		= "http://irfree.com/category/tv-shows"
 	feeds['tv_x264']		= "http://irfree.com/category/tv-shows/tv-showx264"
 	feeds['boxsets']		= "http://irfree.com/category/tv-shows/tv-showsboxsets"
-	feeds['vectors']		= "http://irfree.com/category/vectors"
-	feeds['wallpapers']		= "http://irfree.com/category/wallpapers"
+	feeds['graphics']		= "http://irfree.com/category/graphics"
+	feeds['other']			= "http://irfree.com/category/graphics/other"
+	feeds['templates']		= "http://irfree.com/category/graphics/templates"
+	feeds['vectors']		= "http://irfree.com/category/graphics/vectors"
+	feeds['wallpapers']		= "http://irfree.com/category/graphics/wallpapers"
 	feeds['search']			= "http://irfree.com/?s="
 
 	# we fill the list with menuitems, with labels from the appropriate language file
@@ -81,16 +86,24 @@ class IRFreeNavigation(DDLScraperNavigation):
 		{'label':__language__( 30017 )	,'path':"/root/ebooks"			, 'thumbnail':"ebooks"			, 'feed':"" },
 		{'label':__language__( 30001 )	,'path':"/root/ebooks/all"		, 'thumbnail':"ebooks"			, 'feed':"ebooks" },
 		{'label':__language__( 30018 )	,'path':"/root/ebooks/mags"		, 'thumbnail':"ebooks"			, 'feed':"magazines" },
-		{'label':__language__( 30019 )	,'path':"/root/apps"			, 'thumbnail':"apps"			, 'feed':"apps" },
+		{'label':__language__( 30019 )	,'path':"/root/apps"			, 'thumbnail':"apps"			, 'feed':"" },
+		{'label':__language__( 30001 )	,'path':"/root/apps/all"		, 'thumbnail':"apps"			, 'feed':"apps" },
+		{'label':__language__( 30044 )	,'path':"/root/apps/mac"		, 'thumbnail':"apps"			, 'feed':"mac" },
+		{'label':__language__( 30041 )	,'path':"/root/mobile"			, 'thumbnail':"mobile"			, 'feed':"" },
+		{'label':__language__( 30001 )	,'path':"/root/mobile/all"		, 'thumbnail':"mobile"			, 'feed':"mobile" },
+		{'label':__language__( 30042 )	,'path':"/root/mobile/android"	, 'thumbnail':"mobile"			, 'feed':"android" },
+		{'label':__language__( 30032 )	,'path':"/root/mobile/iphone"	, 'thumbnail':"iphone"			, 'feed':"iphone" },
+		{'label':__language__( 30043 )	,'path':"/root/mobile/winmobile", 'thumbnail':"mobile"			, 'feed':"winmobile" },
+		{'label':__language__( 30040 )	,'path':"/root/graph"			, 'thumbnail':"graphics"		, 'feed':"" },
+		{'label':__language__( 30001 )	,'path':"/root/graph/all"		, 'thumbnail':"graphics"		, 'feed':"graphics" },
+		{'label':__language__( 30033 )	,'path':"/root/graph/other"		, 'thumbnail':"graphics"		, 'feed':"other" },
+		{'label':__language__( 30035 )	,'path':"/root/graph/templates"	, 'thumbnail':"graphics"		, 'feed':"templates" },
+		{'label':__language__( 30037 )	,'path':"/root/graph/vectors"	, 'thumbnail':"graphics"		, 'feed':"vectors" },
+		{'label':__language__( 30038 )	,'path':"/root/graph/wallpapers", 'thumbnail':"graphics"		, 'feed':"wallpapers" },
 		# miscellaneous
 		{'label':__language__( 30031 )	,'path':"/root/misc"			, 'thumbnail':"misc"			, 'feed':"" },
-		{'label':__language__( 30032 )	,'path':"/root/misc/iphone"		, 'thumbnail':"iphone"			, 'feed':"iphone" },
-		{'label':__language__( 30033 )	,'path':"/root/misc/other"		, 'thumbnail':"misc"			, 'feed':"other" },
 		{'label':__language__( 30034 )	,'path':"/root/misc/retro"		, 'thumbnail':"misc"			, 'feed':"retro" },
-		{'label':__language__( 30035 )	,'path':"/root/misc/templates"	, 'thumbnail':"misc"			, 'feed':"templates" },
 		{'label':__language__( 30036 )	,'path':"/root/misc/tutorials"	, 'thumbnail':"misc"			, 'feed':"tutorials" },
-		{'label':__language__( 30037 )	,'path':"/root/misc/vectors"	, 'thumbnail':"misc"			, 'feed':"vectors" },
-		{'label':__language__( 30038 )	,'path':"/root/misc/wallpapers"	, 'thumbnail':"misc"			, 'feed':"wallpapers" },
 		# search
 		{'label':__language__( 30080 )	,'path':"/root/search"			, 'thumbnail':"search"			, 'feed':"search" },
 	)
